fixed spacing

--- a/_sass/_sleeper.scss
+++ b/_sass/_sleeper.scss
@@ -4,7 +4,7 @@
   text-align: center;
   margin: 0;
   width: 100vw;
-  height: 75vh;
+  height: 80vh;
 }
 
 .sky-background {
@@ -25,7 +25,7 @@
 .bitcamp-logo-container {
   position: absolute;
   background: transparent;
-  top: 6vh;
+  top: 10vh;
   left: 6vh;
 }
 
@@ -33,7 +33,7 @@
   background: transparent;
   position: relative;
   color: #FFFFFF;
-  bottom: 50vh;
+  bottom: 45vh;
   font-weight: 600;
   text-align: center;
   padding-left: 15px;
@@ -47,11 +47,11 @@
 footer {
   margin: 0;
   background-color: #A58D7C;
-  height: 25vh;
+  height: 20vh;
 }
 
 footer p {
-  padding-top: 20px;
+  padding-top: 15px;
   color: #1A2E33;
 }
 
